--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -49,7 +49,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Locale.Dark"
-        android:uiOptions="splitActionBarWhenNarrow" >
+        android:uiOptions="splitActionBarWhenNarrow" 
+        android:debuggable="true">
 
         <!--
              This optional Activity comes from the Locale Developer Platform Android Library Project. If this plug-in does 
